dist_man1_MANS=

if BUILD_REBITCOIND
  dist_man1_MANS+=rebitcoind.1
endif

if ENABLE_QT
  dist_man1_MANS+=rebitcoin-qt.1
endif

if BUILD_REBITCOIN_CLI
  dist_man1_MANS+=rebitcoin-cli.1
endif

if BUILD_REBITCOIN_TX
  dist_man1_MANS+=rebitcoin-tx.1
endif

if ENABLE_WALLET
if BUILD_REBITCOIN_WALLET
  dist_man1_MANS+=rebitcoin-wallet.1
endif
endif
